# icu

icu4c/source/common/: BUILD.bazel
